tests/baselines/reference/collisionExportsRequireAndVar.errors.txt
==== tests/cases/compiler/collisionExportsRequireAndVar.ts (2 errors) ====
    export function foo() {
    }
    var exports = 1;
        ~~~~~~~~~~~
!!! collisionExportsRequireAndVar.ts(3,5): error TS2228: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of an external module.
    var require = "require";
        ~~~~~~~~~~~~~~~~~~~
!!! collisionExportsRequireAndVar.ts(4,5): error TS2228: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of an external module.
    